<resources>
    <string name="app_name">Registro</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="Button">OK</string>
    <string name="Digite_su_cedula">Digite su cedula</string>

    <string name="introd">Por favor ingrese todos sus datos</string>
    <string name="nombre">Nombre:</string>
    <string name="digite_nombre">Digite su nombre</string>
    <string name="correo">Correo:</string>
    <string name="digite_correo">Digite su correo</string>
    <string name="telefono">Telefono:</string>
    <string name="digite_telefono">Digite su telefono</string>
    <string name="sexo">Sexo:</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="ciudad">Ciudad:</string>
    <string name="hobbie">Hobbie:</string>
    <string name="fecha">Fecha de nacimiento:</string>
    <string name="toastcampos">Faltan campos por llenar!</string>


    <string-array name="ciudades">
        <item>Medellín</item>
        <item>Cali</item>
        <item>Bogotá</item>
        <item>Cartagena</item>
        <item>Manizales</item>
        <item>Sincelejo</item>
        <item>Cucuta</item>
        <item>Pereira</item>
    </string-array>

    <string name="guitara">Tocar la guitarra</string>
    <string name="cantar">Cantar</string>
    <string name="pintar">Pintar</string>
    <string name="programar">Programar</string>


</resources>
