<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/introd"
        android:textSize="25sp"
        android:textColor="@color/royalblue"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="20sp"
            android:textColor="@color/purple"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_nombre"
            android:inputType="text"
            android:textSize="20sp"
            android:id="@+id/editNombre"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textColor="@color/purple"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_correo"
            android:inputType="text"
            android:textSize="20sp"
            android:id="@+id/editCorreo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textColor="@color/purple"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_telefono"
            android:inputType="phone"
            android:textSize="20sp"
            android:id="@+id/editTelefono"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textColor="@color/purple"
        android:textSize="20sp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rfemenino"
            android:onClick="radiobutton"
            android:text="@string/femenino"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rmasculino"
            android:onClick="radiobutton"
            android:text="@string/masculino"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"
        android:textColor="@color/purple"
        android:textSize="20sp"/>
    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/ciudad"
        android:entries="@array/ciudades"
        android:id="@+id/sciudades"
        android:theme="@style/AppTheme">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobbie"
        android:textColor="@color/purple"
        android:textSize="20sp"/>
    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/guitara"
        android:id="@+id/chguitarra"
        android:onClick="checkbox"/>
    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pintar"
        android:id="@+id/chpintar"
        android:onClick="checkbox"/>
    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/programar"
        android:id="@+id/chprogramar"
        android:onClick="checkbox"/>
    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantar"
        android:id="@+id/chcantar"
        android:onClick="checkbox"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textColor="@color/purple"
        android:textSize="20sp"/>
    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:layout_gravity="center"
        android:id="@+id/dpResult"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button"
        android:textSize="20sp"
        android:id="@+id/boton"
        android:onClick="CargarDatos"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textColor="@color/blueviolet"
        android:id="@+id/tNombre"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blueviolet"
        android:text="@string/correo"
        android:id="@+id/tCorreo"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textColor="@color/blueviolet"
        android:id="@+id/tTelefono"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:id="@+id/tSexo"
        android:textColor="@color/blueviolet"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"
        android:textColor="@color/blueviolet"
        android:id="@+id/tCiudad"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobbie"
        android:id="@+id/tHobbie"
        android:textColor="@color/blueviolet"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:id="@+id/tFecha"
        android:textColor="@color/blueviolet"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>
</ScrollView>


